[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/Sprites/characters/purpleBlob.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mobs/purpleBlob.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.52736

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.515267, 1 )
colors = PoolColorArray( 0.423529, 0.0941176, 0.768627, 1, 0.427451, 0.176471, 0.686275, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.996491, 0 ), -3.40057, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 19.2
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 3.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="CircleShape2D" id=10]
radius = 100.0

[sub_resource type="CircleShape2D" id=11]
radius = 9.6323

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="purpleBlob" type="KinematicBody2D"]
collision_layer = 2147483656
collision_mask = 43
script = ExtResource( 2 )
damage = 100
hp = 10
speed = 30
patrolRange = 200
coinsDropped = 2
fastSpeed = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.15749, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
amount = 30
lifetime = 0.5
randomness = 0.4
local_coords = false
process_material = SubResource( 5 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -9.12756
margin_top = -11.4094
margin_right = -9.12756
margin_bottom = -11.4094
rect_scale = Vector2( 0.15, 0.1 )

[node name="DeadParticles" type="Particles2D" parent="."]
emitting = false
process_material = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="audio" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
